<resources>
    <string name="app_name">StackExchange API</string>
    <string name="title_name">user</string>
    <string name="progress_title">Loading…</string>
    <string name="error_toast">Try again…</string>
    <string name="text_error">Try again</string>

    <string name="back_dialog_text">Are you sure you want to do exit..?</string>
    <string name="back_dialog_positive_btn">YES</string>
    <string name="back_dialog_negative_btn">NO</string>

    <string name="filter_dialog_reset_button">RESET</string>

    <string name="menu_search_title">Search</string>
    <string name="menu_filter_title">Filter</string>
    <string name="menu_open_in_browser_title">Open in browser</string>
    <string name="menu_copy_to_clipboard">Copy to clipboard</string>
    <string name="menu_share_with_title">Share With</string>

    <string name="share_dialog_title">"share text to"</string>
    <string name="text_order">Order</string>
    <string name="text_sort">Sort</string>
    <string name="text_from_date">From Date</string>
    <string name="text_to_date">To Date</string>

    <string name="tab_activity_title">User Detail</string>

    <string name="post_type_answer_text">Answer</string>
    <string name="post_type_question_text">Question</string>

    <string name="dialog_tag">dialog</string>
    <string name="text_to_date_error">To date must be greater than from date.</string>

    <string name="tab_title_activity">Activity</string>
    <string name="tab_title_profile">Profile</string>

    <string name="nav_user_detail_title">Users</string>
    <string name="nav_question_detail_title">Questions</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_tag_title">Tags</string>

    <string name="orderPrompt">Choose an order</string>
    <string name="sortPrompt">Sort by</string>

    <string name="siteTitle">All Sites</string>
    <string name="siteCompare">stackoverflow</string>

    <string-array name="spinnerUserOrder">
        <item>desc</item>
        <item>asc</item>
    </string-array>

    <string-array name="spinnerUserSort">
        <item>reputation</item>
        <item>creation</item>
        <item>modified</item>
        <item>name</item>
    </string-array>

    <string-array name="spinnerQuestionSort">
        <item>votes</item>
        <item>activity</item>
        <item>creation</item>
        <item>hot</item>
        <item>week</item>
        <item>month</item>
    </string-array>
    <string-array name="navigation_drawer_items_array">
        <item>Users</item>
        <item>Questions</item>
        <item>Tags</item>
    </string-array>

    <string-array name="tag_spinner_array">
        <item>Popular</item>
        <item>Name</item>
        <item>Activity</item>
    </string-array>

    <string-array name="site_spinner_array">
        <item>Main Sites</item>
        <item>Meta Sites</item>
        <item>All Sites</item>
    </string-array>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="search_tag_edit_text_hint">Search Tags</string>

    <string name="open_dialog_from_question_drawer">questionDrawer</string>
    <string name="open_dialog_from_user_drawer">userDrawer</string>

    <string name="text_no_detail_found">No Detail Found</string>
</resources>
