<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:minWidth="320dp"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/customdialog_linearlayout_hight"
    android:orientation="horizontal"
    android:weightSum="2"
    android:layout_marginBottom="@dimen/activity_horizontal_margin">
    <TextView
        android:text="@string/text_order"
        android:layout_width="0dp"
        android:layout_height="@dimen/customdialog_linearlayout_hight"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:id="@+id/text_order" />
    <Spinner
        android:layout_width="0dp"
        android:layout_height="@dimen/customdialog_linearlayout_hight"
        android:id="@+id/spinner_order"
        android:prompt="@string/orderPrompt"
        android:paddingLeft="10dp"
        android:layout_weight="1"
        android:entries="@array/spinnerOrder" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/customdialog_linearlayout_hight"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/customdialog_linearlayout_hight"
            android:id="@+id/text_sort"
            android:text="@string/text_sort"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="@dimen/customdialog_linearlayout_hight"
            android:id="@+id/spinner_sort"
            android:entries="@array/spinnerSort"
            android:prompt="@string/sortPrompt"
            android:paddingLeft="10dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/customdialog_linearlayout_hight"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/customdialog_linearlayout_hight"
            android:id="@+id/text_from_date"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/text_from_date"
            android:gravity="center_vertical"
            android:textSize="@dimen/badge_text_size"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/customdialog_linearlayout_hight"
            android:id="@+id/btn_from_date"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/customdialog_linearlayout_hight"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/customdialog_linearlayout_hight"
            android:id="@+id/text_to_date"
            android:layout_weight="1"
            android:maxLines="1"
            android:textSize="@dimen/badge_text_size"
            android:gravity="center_vertical"
            android:text="@string/text_to_date"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/customdialog_linearlayout_hight"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:id="@+id/btn_to_date"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/backdialog_positive_btn"
                android:id="@+id/btn_positive"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/backdialog_negative_btn"
                android:layout_gravity="end"
                android:id="@+id/btn_negative"/>
    </LinearLayout>
</LinearLayout>
